# enscrive-docs

./: .gitignore  Cargo.toml  NOTICE  README.md  TRADEMARKS.md
.github/workflows/: release.yml
assets/js/: search.js
assets/themes/enscrive/: style.css
assets/themes/neutral/: style.css
crates/cli/: Cargo.toml
crates/cli/src/: global.rs  main.rs
crates/cli/src/commands/: bootstrap.rs  config.rs  ingest.rs  init.rs  mod.rs  reset.rs  search.rs  serve.rs  voice.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/render/: Cargo.toml
crates/render/src/: assets.rs  lib.rs  markdown.rs  page.rs  templates.rs  theme.rs
crates/render/templates/: _base.html  index.html  page.html
examples/self-docs/: README.md  configuration.md  index.md  quickstart.md  search.md  serving.md  themes.md  troubleshooting.md  voices.md
