[workspace]
resolver = "2"
members = ["crates/core", "crates/render", "crates/cli"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/enscrive/enscrive-docs"
homepage = "https://docs.enscrive.io"
authors = ["Enscrive"]
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
thiserror = "1"
