[package]
name = "enscrive-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Turn any markdown directory into a retrieval-native documentation site backed by Enscrive"
readme = "../../README.md"
keywords = ["docs", "documentation", "search", "embeddings", "enscrive"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "enscrive-docs"
path = "src/main.rs"

[dependencies]
enscrive-docs-core = { path = "../core", version = "0.0.1" }
enscrive-docs-render = { path = "../render", version = "0.0.1" }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
